[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "procrustes-bg"
dynamic = ["version"]
readme = "README.md"
requires-python = ">=3.8"
license = {text = "Custom License - See license.md"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "numpy>=1.19.0",
    "pandas>=1.3.0",
    "matplotlib>=3.3.0",
    "seaborn>=0.11.0",
]

[tool.setuptools]
packages = ["procrustes_bg"]
include-package-data = true

[tool.setuptools.dynamic]
version = {attr = "procrustes_bg.__version__"}

[tool.setuptools.package-data]
procrustes_bg = ["data/*"]
